--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfillo-web-karan</title>
   <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
-  
+  <header>
+    <nav class="nav">
+      <div class="header">
+        <h1>KARAN.<sub>Dev</sub></h1>
+      </div>
+      <div class="nav-links">
+        <span><a href="">About</a></span>
+        <span><a href="">Skills</a></span>
+        <span><a href="">Contact Me</a></span>
+      </div>
+    </nav>
+  </header>
 </body>
+
 </html>
