--- a/index.html
+++ b/index.html
@@ -5,22 +5,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfillo-web-karan</title>
+ <script src="https://kit.fontawesome.com/ba0691df2d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Charm:wght@400;700&family=Rubik+Vinyl&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
   <header>
     <nav class="nav">
-      <div class="header">
-        <h1>KARAN.<sub>Dev</sub></h1>
-      </div>
-      <div class="nav-links">
-        <span><a href="">About</a></span>
-        <span><a href="">Skills</a></span>
-        <span><a href="">Contact Me</a></span>
+      <div class="actions">
+        <div class="header">
+          <h1>KARAN.<sub>Dev</sub></h1>
+        </div>
+        <div class="nav-links">
+          <span class="margin-navlinks"><a href="">About</a></span>
+          <span class="margin-navlinks"><a href="">Skills</a></span>
+          <span class="margin-navlinks"><a href="">Contact Me</a></span>
+        </div>
       </div>
     </nav>
   </header>
+  <i class="fa-sharp-duotone fa-solid fa-bars-staggered"></i>
 </body>
 
 </html>
