--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfillo-web-karan</title>
- <script src="https://kit.fontawesome.com/ba0691df2d.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/ba0691df2d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,7 +28,34 @@
       </div>
     </nav>
   </header>
-  <i class="fa-sharp-duotone fa-solid fa-bars-staggered"></i>
+  <br>
+  <hr>
+  <br>
+  <nav class="nav">
+    <div class="actions">
+      <div class="header">
+        <h1>KARAN.<sub>Dev</sub></h1>
+      </div>
+    </div>
+    <div class="right-nav">
+
+      <button class="btn" onclick="openNextNav();"><i class="fa-sharp-duotone fa-solid fa-bars-staggered"></i></button>
+    </div>
+    <div class="nav-link-2">
+      <div class="cbtn">
+        <a class="cancel-btn" onclick="closeNextNav();" href="javascript:void(0)">&times;</a>
+      </div>
+      <div class="actions2">
+        <div class="about"><a href="">About</a></div>
+
+        <div class="skills"><a href="">Skills</a></div>
+
+        <div class="contact-me"><a href="">Contact Me</a></div>
+
+      </div>
+    </div>
+  </nav>
+  <script src="/index.js"></script>
 </body>
 
 </html>
