updated nav bar

--- a/index.html
+++ b/index.html
@@ -15,26 +15,15 @@
 
 <body>
   <header>
-    <nav class="nav">
-      <div class="actions">
-        <div class="header">
-          <h1>KARAN.<sub>Dev</sub></h1>
-        </div>
-        <div class="nav-links">
-          <span class="margin-navlinks"><a href="">About</a></span>
-          <span class="margin-navlinks"><a href="">Skills</a></span>
-          <span class="margin-navlinks"><a href="">Contact Me</a></span>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <br>
-  <hr>
-  <br>
-  <nav class="nav">
+  <nav id="nav1" class="nav">
     <div class="actions">
       <div class="header">
         <h1>KARAN.<sub>Dev</sub></h1>
+      </div>
+      <div class="nav-links">
+        <span class="margin-navlinks"><a href="">About Me</a></span>
+        <span class="margin-navlinks"><a href="">Technologies</a></span>
+        <span class="margin-navlinks"><a href="">Contact Me</a></span>
       </div>
     </div>
     <div class="right-nav">
@@ -47,11 +36,9 @@
       </div>
       <div class="actions2">
         <div class="about"><a href="">About</a></div>
-
-        <div class="skills"><a href="">Skills</a></div>
-
+        <div class="skills"><a href="">Technologies</a></div>
+        <div class="skills"><a href="">Projects</a></div>
         <div class="contact-me"><a href="">Contact Me</a></div>
-
       </div>
     </div>
   </nav>
