--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfillo-web-karan</title>
+  <!-- <link rel="icon" href="./images/title.png" > -->
   <script src="https://kit.fontawesome.com/ba0691df2d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
