--- a/index.html
+++ b/index.html
@@ -47,7 +47,21 @@
   <!-- <div class="hr" style="width:100%;
   height:1px;"></div> -->
   <main>
-
+    <div class="about-me">
+      <div class="left-part">
+  
+          <h1>
+              hi my name is karan
+          </h1>
+          <br>
+          <p>
+              i'm a web devloper 
+          </p>
+      </div>
+      <div class="image">
+          <img src="/IMG20240122092747.jpg" alt="">
+      </div>
+     </div>
   </main>
   <footer>
 
