--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>
       </div>
       <div class="right-nav">
-        <button class="btn" onclick="openNextNav();"><i
-            class="fa-sharp-duotone fa-solid fa-bars-staggered"></i></button>
+        <button class="btn" onclick="openNextNav();">
+          <i class="fa-sharp-duotone fa-solid fa-bars-staggered"></i></button>
       </div>
       <div class="nav-link-2">
         <div class="cbtn">
@@ -50,15 +50,15 @@
     <div class="about-me">
       <div class="left-part">
           <h1>
-              hi my name is karan
+              I'm karan
           </h1>
           <br>
           <p>
-              i'm a web devloper 
+              i'm a <span>Frontend Developer</span> based in Pune,india and a second-year Bachelor of Computer Science student at SSPU. I am passionate about improving my coding skills and developing applications and websites. I build Websites using <b>HTML,CSS,javascript.</b>Working for myself to improve my skills.   
           </p>
       </div>
       <div class="image">
-          <img src="/IMG20240122092747.jpg" alt="">
+          <img src="/images/backgrondimg.png.jpg" alt="">
       </div>
      </div>
   </main>
