updated the description

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
     <div class="about-me">
       <div class="left-part">
           <h1>
-              I'm karan
+              I'm Karan
           </h1>
           <br>
           <p>
-              i'm a <span>Frontend Developer</span> based in Pune,india and a second-year Bachelor of Computer Science student at SSPU. I am passionate about improving my coding skills and developing applications and websites. I build Websites using <b>HTML,CSS,javascript.</b>Working for myself to improve my skills.   
+              i'm a <span>Frontend Developer</span> based in Pune,india and a second-year Bachelor of Computer Science student at SSPU. I am passionate about improving my coding skills and developing applications and websites. I build Websites using <pre><b><span>HTML ,CSS ,javascript. </span></b></pre>Working for myself to improve my skills.   
           </p>
       </div>
       <div class="image">
