added the script fun.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="nav-link-2">
         <div class="cbtn">
-          <a class="cancel-btn" onclick="closeNextNav();" href="">&times;</a>
+          <a class="cancel-btn" onclick="closeNextNav();" href="javascript:void(0)">&times;</a>
         </div>
         <div class="actions2">
           <div class="about"><a href="#">About</a></div>
@@ -54,7 +54,7 @@
           </h1>
           <br>
           <p>
-              i'm a <span>Frontend Developer</span> based in Pune,india and a second-year Bachelor of Computer Science student at SSPU. I am passionate about improving my coding skills and developing applications and websites. I build Websites using <pre><b><span>HTML ,CSS ,javascript. </span></b></pre>Working for myself to improve my skills.   
+              i'm a <span>Frontend Developer</span> based in Pune,india and a second-year Bachelor of Computer Science student at SSPU. I am passionate about improving my coding skills and developing applications and websites. I build Websites using <pre><b><span>HTML ,CSS and Javascript. </span></b></pre>Working on myself to improve my skills.   
           </p>
       </div>
       <div class="image">
