--- a/index.html
+++ b/index.html
@@ -49,18 +49,37 @@
   <main>
     <div class="about-me">
       <div class="left-part">
-          <h1>
-              I'm Karan
-          </h1>
-          <br>
-          <p>
-              i'm a <span>Frontend Developer</span> based in Pune,india and a second-year Bachelor of Computer Science student at SSPU. I am passionate about improving my coding skills and developing applications and websites. I build Websites using <pre><b><span>HTML ,CSS and Javascript. </span></b></pre>Working on myself to improve my skills.   
-          </p>
+        <h1>
+          I'm Karan
+        </h1>
+        <br>
+        <p>
+          i'm a <span>Frontend Developer</span> based in Pune,india and a second-year Bachelor of Computer Science
+          student at SSPU. I am passionate about improving my coding skills and developing applications and websites. I
+          build Websites using
+        <pre><b><span>HTML ,CSS and Javascript. </span></b></pre>Working on myself to improve my skills.
+        </p>
       </div>
       <div class="image">
-          <img src="/images/backgrondimg.png.jpg" alt="">
+        <img src="/images/backgrondimg.png.jpg" alt="">
       </div>
-     </div>
+    </div>
+    <div class="about-me">
+      <h1>About me</h1>
+    </div>
+    <div class="about-me">
+      <h1>
+        Technologies
+      </h1>
+    </div>
+    <div class="about-me">
+       <h1>
+        Projects
+       </h1>
+    </div>
+    <div class="about-me">
+      <h1>Contact Me</h1>
+    </div>
   </main>
   <footer>
 
