--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </p>
       </div>
       <div class="image">
-        <img src="/images/backgrondimg.png.jpg" alt="">
+        <img src="https://tse2.mm.bing.net/th?id=OIP._GieAWWbWF1Rj2BtkX6NiAHaFj&pid=Api&P=0&h=180" alt="">
       </div>
     </div>
     <div class="about">
