--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a class="cancel-btn" onclick="closeNextNav();" href="javascript:void(0)">&times;</a>
         </div>
         <div class="actions2">
-          <div class="about"><a href="#">About</a></div>
+          <div class="about-m"><a href="#about">About</a></div>
           <div class="skills"><a href="#">Technologies</a></div>
           <div class="skills"><a href="#">Projects</a></div>
           <div class="contact-me"><a href="#">Contact Me</a></div>
@@ -64,7 +64,7 @@
         <img src="https://tse2.mm.bing.net/th?id=OIP._GieAWWbWF1Rj2BtkX6NiAHaFj&pid=Api&P=0&h=180" alt="">
       </div>
     </div>
-    <div class="about">
+    <div id="about" class="about">
         <div id="left-part">
           <img src="/images/backgrondimg.png.jpg" alt="">
         </div>
