--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
       <h1>
         Technologies
       </h1>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>C</li>
+        <li>MY SQL</li>
+      </ul>
     </div>
     <div class="about">
        <h1>
