added class to the tech

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </p>
       </div>
     </div>
-    <div class="about">
+    <div class="tech-section">
       <h1>
         Technologies
       </h1>
