--- a/index.html
+++ b/index.html
@@ -94,16 +94,22 @@
       </div>
     </div>
     <div class="tech-section">
-      <h1>
-        Technologies
-      </h1>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>C</li>
-        <li>MY SQL</li>
-      </ul>
+      <div class="title">
+        <h1>
+          Technologies
+        </h1>
+
+      </div>
+      <div class="list">
+
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>C</li>
+          <li>MY SQL</li>
+        </ul>
+      </div>
     </div>
     <div class="about">
        <h1>
