--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
     </div>
     <div class="about">
       <h1>Contact Me</h1>
+      <form action="/submit.php">
+        <label for="#name">Enter the Name:</label>
+        <input  id ="name"  type="text" value="name">
+      </form>
     </div>
   </main>
   <footer>
