--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         Projects
        </h1>
     </div>
-    <div class="about">
+    <div class="contact-section">
       <h1>Contact Me</h1>
       <form action="/submit.php">
         <label for="#name">Enter the Name:</label>
