--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
        </h1>
     </div>
     <div class="contact-section">
-      <h1>Contact Me</h1>
+      <div class="con">
+
+        <h1>Contact Me</h1>
+      </div>
       <form action="/submit.php">
         <label for="#name">Enter the Name:</label>
         <input  id ="name"  type="text" value="name">
