--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         </p>
       </div>
       <div class="image">
-        <img src="https://tse2.mm.bing.net/th?id=OIP._GieAWWbWF1Rj2BtkX6NiAHaFj&pid=Api&P=0&h=180" alt="">
+        <img src="/images/backgrondimg.png.jpg" alt="">
       </div>
     </div>
     <div id="about" class="about">
         <div id="left-part">
-          <img src="/images/backgrondimg.png.jpg" alt="">
+          <!-- <img src="/images/backgrondimg.png.jpg" alt=""> -->
         </div>
       <div id="right-part">
 
