--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
   <!-- <div class="hr" style="width:100%;
   height:1px;"></div> -->
   <main>
-    <div class="about-me">
+    <!-- <div class="about-me">
       <div class="left-part">
         <h1>
-          I'm Karan
+          I'm <span>Karan</span>
         </h1>
         <br>
         <p>
@@ -67,7 +67,7 @@
     <div id="about" class="about">
         <div id="left-part">
           <!-- <img src="/images/backgrondimg.png.jpg" alt=""> -->
-        </div>
+        <!-- </div>
       <div id="right-part">
 
         <h1>About me</h1>
@@ -125,7 +125,7 @@
         <label for="#name">Enter the Name:</label>
         <input  id ="name"  type="text" value="name">
       </form>
-    </div>
+    </div> --> 
   </main>
   <footer>
 
