--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
   height:1px;"></div> -->
   <main>
   <div class="container">
-    
+      <div class="left-part"></div>
+      <div class="right-part">
+        <img src="/images/karanpic.jpg" alt="" srcset="">
+      </div>
   </div>
   </main>
   <footer>
