--- a/index.html
+++ b/index.html
@@ -48,10 +48,18 @@
   height:1px;"></div> -->
   <main>
   <div class="container">
-      <div class="left-part"></div>
+      <div class="left-part">
+        <h1>i am Karan</h1>
+        <h1>i'm a frontend </h1>
+        <h1>developer</h1>
+      </div>
       <div class="right-part">
         <img src="/images/karanpic.jpg" alt="" srcset="">
       </div>
+  </div> 
+
+  <div class="container">
+    
   </div>
   </main>
   <footer>
