updated second con

--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
       </div>
   </div> 
 
-  <div class="container text-color">
-    <div class="left-part">
+  <div class="container2 text-color">
       <h1 id="about-me"> <span>About Me</span></h1>
       <p>
        <h2>Hello everyone!</h2> 
@@ -77,10 +76,6 @@
          
        I'm excited to be a part of this community and look forward to connecting with fellow 
        developers and professionals!
-    </div>
-    <div class="right-part">
-      <h1><span>profiles</span></h1>
-    </div>
   </div>
 
   <div class="container"></div>
