--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
   </div> 
 
-  <div class="container2 text-color">
+  <div class="container2 ad text-color">
       <h1 id="about-me"> <span>About Me</span></h1>
       <p>
        <h2>Hello everyone!</h2> 
