updated about me

--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
         <h1>i'm a <span>frontend </span></h1>
         <h1> <span>developer</span></h1>
         <h3>based in Baramati,
-          Maharashtra, India. I have 1 years of experience in developing engaging and user-friendly
-          web applications.</h3>
+          Maharashtra, India. I am a passionate web developer committed to crafting seamless and engaging digital experiences.</h3>
       </div>
       <div class="right-part">
         <img src="/images/karanpic.jpg" alt="" srcset="">
@@ -66,8 +65,7 @@
       <p>
        <h2>Hello everyone!</h2> 
       <h1>My name is <span>Karan</span>,</h1>and I'm a front-end developer based in Baramati,
-       Maharashtra, India. I have 1 years of experience in developing engaging and user-friendly
-       web applications.
+       Maharashtra, India.I am a passionate web developer committed to crafting seamless and engaging digital experiences.
          
        Currently, I'm pursuing My Bachlor's Degree at SPPU. where I focus on creating interactive
        and responsive user interfaces using technologies like HTML, CSS and JavaScript.I take 
