--- a/contactform.html
+++ b/contactform.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Contact Form</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/form.css">
 </head>
 <body>
     <div class="form-container">
