--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Portfillo-web-karan</title>
   <!-- <link rel="icon" href="./images/title.png" > -->
   <script src="https://kit.fontawesome.com/ba0691df2d.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="/css/index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Charm:wght@400;700&family=Rubik+Vinyl&display=swap"
