--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="nav-links">
           <span class="margin-navlinks"><a href="#">About Me</a></span>
           <span class="margin-navlinks"><a href="#">Technologies</a></span>
-          <span class="margin-navlinks"><a href="#">Contact Me</a></span>
+          <span class="margin-navlinks"><a href="/contactform.html">Contact Me</a></span>
         </div>
       </div>
       <div class="right-nav">
