--- a/contactform.html
+++ b/contactform.html
@@ -9,7 +9,7 @@
 <body>
     <div class="form-container">
         <h2>Contact Me</h2>
-        <form action="send_email.php" method="post">
+        <form action="/send_email.php" method="post">
             <div class="upper-part">
 
                 <label for="name">Name:</label>
