added new container

--- a/index.html
+++ b/index.html
@@ -77,8 +77,16 @@
 
   </div>
 
-  <div class="container"></div>
-  <div class="container"></div>
+  <!-- <div class="container" style="display: flex; flex-direction:column">
+    <div class="adout-me">
+
+      <h1 id="about-me"> <span>Education</span></h1>
+    </div>
+    <br>
+    <img  style="margin: 5%;" src="https://tse2.mm.bing.net/th?id=OIP.HnDYsaVc0WsfV0ZdWQl66wHaB7&pid=Api&P=0&h=180"" alt="" width="90%" srcset="">
+  </div> -->
+
+  <div class="container3"></div>
   </main>
   <footer>
 
