added images of tech

--- a/index.html
+++ b/index.html
@@ -86,7 +86,11 @@
     <img  style="margin: 5%;" src="https://tse2.mm.bing.net/th?id=OIP.HnDYsaVc0WsfV0ZdWQl66wHaB7&pid=Api&P=0&h=180"" alt="" width="90%" srcset="">
   </div> -->
 
-  <div class="container3"></div>
+  <div class="container3">
+    <div class="about-me">
+      <h1><span>Technologies</span></h1>
+    </div>
+  </div>
   </main>
   <footer>
 
