--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
     <div class="about-me">
       <h1><span>Technologies</span></h1>
     </div>
+    <div class="tech">
+      <div class="tech-img"><img src="" alt=""></div>
+      <div class="tech-img"><img src="" alt=""></div>
+      <div class="tech-img"><img src="" alt=""></div>
+      <div class="tech-img"><img src="" alt=""></div>
+      <div class="tech-img"><img src="" alt=""></div>
+    </div>
   </div>
   </main>
   <footer>
