--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
     <img  style="margin: 5%;" src="https://tse2.mm.bing.net/th?id=OIP.HnDYsaVc0WsfV0ZdWQl66wHaB7&pid=Api&P=0&h=180"" alt="" width="90%" srcset="">
   </div> -->
 
-  <div class="container3">
+  <div class="container3 container">
     <div class="about-me">
       <h1><span>Technologies</span></h1>
     </div>
-    <div class="tech">
-      <div class="tech-img"><img src="" alt=""></div>
-      <div class="tech-img"><img src="" alt=""></div>
-      <div class="tech-img"><img src="" alt=""></div>
-      <div class="tech-img"><img src="" alt=""></div>
-      <div class="tech-img"><img src="" alt=""></div>
+    <div class="tech ">
+      <div class="tech-img"><img src="/images/letter-c.png" alt=""></div>
+      <div class="tech-img"><img src="/images/database.png" alt=""></div>
+      <div class="tech-img"><img src="/images/html (1).png" alt=""></div>
+      <div class="tech-img"><img src="/images/css-3.png" alt=""></div>
+      <div class="tech-img"><img src="/images/java-script.png" alt=""></div>
     </div>
   </div>
   </main>
