--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
       <h1><span>Technologies</span></h1>
     </div>
     <div class="tech ">
-      <div class="tech-img"><img src="/images/letter-c.png" alt=""></div>
-      <div class="tech-img"><img src="/images/database.png" alt=""></div>
-      <div class="tech-img"><img src="/images/html (1).png" alt=""></div>
-      <div class="tech-img"><img src="/images/css-3.png" alt=""></div>
-      <div class="tech-img"><img src="/images/java-script.png" alt=""></div>
+      <div class="tech-img"><img src="/images/letter-c.png" alt=""> <br><span>c language</span></div>
+      <div class="tech-img"><img src="/images/database.png" alt=""><br><span>c language</span></div>
+      <div class="tech-img"><img src="/images/html (1).png" alt=""><br><span>c language</span></div>
+      <div class="tech-img"><img src="/images/css-3.png" alt=""><br><span>c language</span></div>
+      <div class="tech-img"><img src="/images/java-script.png" alt=""><br><span>c language</span></div>
     </div>
   </div>
   </main>
