--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       <div class="tech-img"><img src="/images/database.png" alt=""><br><span>SQL DataBase</span></div>
       <div class="tech-img"><img src="/images/html (1).png" alt=""><br><span>HTML</span></div>
       <div class="tech-img"><img src="/images/css-3.png" alt=""><br><span>CSS</span></div>
+      <div class="tech-img"><img src="/images/bootstrap.png" alt=""><br><span>Bootstrap</span></div>
       <div class="tech-img"><img src="/images/java-script.png" alt=""><br><span>JavaScript</span></div>
     </div>
   </div>
