--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
       <h1><span>Technologies</span></h1>
     </div>
     <div class="tech ">
-      <div class="tech-img"><img src="/images/letter-c.png" alt=""> <br><span>C Language</span></div>
-      <div class="tech-img"><img src="/images/database.png" alt=""><br><span>SQL DataBase</span></div>
-      <div class="tech-img"><img src="/images/html (1).png" alt=""><br><span>HTML</span></div>
-      <div class="tech-img"><img src="/images/css-3.png" alt=""><br><span>CSS</span></div>
-      <div class="tech-img"><img src="/images/bootstrap.png" alt=""><br><span>Bootstrap</span></div>
-      <div class="tech-img"><img src="/images/java-script.png" alt=""><br><span>JavaScript</span></div>
+      <div id="img1" class="tech-img"><img src="/images/letter-c.png" alt=""> <br><span>C Language</span></div>
+      <div id="img2" class="tech-img"><img src="/images/database.png" alt=""><br><span>SQL DataBase</span></div>
+      <div id="img3" class="tech-img"><img src="/images/html (1).png" alt=""><br><span>HTML</span></div>
+      <div id="img4" class="tech-img"><img src="/images/css-3.png" alt=""><br><span>CSS</span></div>
+      <div id="img5" class="tech-img"><img src="/images/bootstrap.png" alt=""><br><span>Bootstrap</span></div>
+      <div id="img6" class="tech-img"><img src="/images/java-script.png" alt=""><br><span>JavaScript</span></div>
     </div>
   </div>
   </main>
