--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
   <div class="container2 ad text-color">
       <h1 id="about-me"> <span>About Me</span></h1>
       <p>
-       <h2>Hello everyone!</h2> 
-      <h1>My name is <span>Karan</span>,</h1>and I'm a front-end developer based in Baramati,
+      <h1>My name is <span>Karan Chhagan Gaikwad</span>,</h1>and I'm a front-end developer based in Baramati,
        Maharashtra, India.I am a passionate web developer committed to crafting seamless and engaging digital experiences.
          
        Currently, I'm pursuing My Bachlor's Degree at SPPU. where I focus on creating interactive
