--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div class="container">
       <div class="left-part">
         <h1>i am <span>Karan</span></h1>
-        <h1>i'm a <span>frontend </span></h1>
+        <h1> a <span>frontend </span></h1>
         <h1> <span>developer</span></h1>
         <h3>based in Baramati,
           Maharashtra, India. I am a passionate web developer committed to crafting seamless and engaging digital experiences.</h3>
@@ -63,7 +63,7 @@
   <div class="container2 ad text-color">
       <h1 id="about-me"> <span>About Me</span></h1>
       <p>
-      <h1>My name is <span>Karan Chhagan Gaikwad</span>,</h1>and I'm a front-end developer based in Baramati,
+      <h1>I am <span>Karan Chhagan Gaikwad</span>,</h1>and I'm a front-end developer based in Baramati,
        Maharashtra, India.I am a passionate web developer committed to crafting seamless and engaging digital experiences.
          
        Currently, I'm pursuing My Bachlor's Degree at SPPU. where I focus on creating interactive
