updated about nav

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <h1>KARAN.<sub>Dev</sub></h1>
         </div>
         <div class="nav-links">
-          <span class="margin-navlinks"><a href="#">About Me</a></span>
+          <span class="margin-navlinks"><a href="#about-me">About Me</a></span>
           <span class="margin-navlinks"><a href="#">Technologies</a></span>
           <span class="margin-navlinks"><a href="/contactform.html">Contact Me</a></span>
         </div>
