--- a/contactform.html
+++ b/contactform.html
@@ -22,7 +22,7 @@
 
             </div>
             <div class="lower-part">
-                <button onclick="openNextFormSlide();" type="button">Next</button>
+                <button class="button next-button" onclick="openNextFormSlide();" type="button">Next</button>
             </div>
 
         </div>
@@ -38,8 +38,8 @@
 
             </div>
             <div class="lower-part">
-                <button type="button" onclick="openPreviousFormSlide();">Previous</button>
-                <button>Submit</button>
+                <button class=" button submit-button" type="button" onclick="openPreviousFormSlide();">Previous</button>
+                <button class="button previous-button">Submit</button>
             </div>
     </form>
     <script src="/index.js"></script>
