--- a/contactform.html
+++ b/contactform.html
@@ -13,11 +13,11 @@
             <div class="upper-part">
 
 
-                <input type="text" id="name" name="name" placeholder="Enter your name" required><br><br>
+                <input class="input-text" type="text" id="name" name="name" placeholder="Enter your name" required><br><br>
 
-                <input type="email" id="email" name="email" placeholder="Enter your email" required><br><br>
+                <input class="input-text"type="email" id="email" name="email" placeholder="Enter your email" required><br><br>
 
-                <textarea id="message" name="message" placeholder="Enter your valueable Message here"
+                <textarea id="message"  class="input-text" name="message" placeholder="Enter your valueable Message here"
                     required></textarea><br><br>
 
             </div>
