--- a/contactform.html
+++ b/contactform.html
@@ -13,9 +13,9 @@
             <div class="upper-part">
 
 
-                <input class="input-text" type="text" id="name" name="name" placeholder="Enter your name" required><br><br>
+                <input class="input" type="text" id="Firstname" name="Firstname" placeholder="First name" required>
 
-                <input class="input-text"type="email" id="email" name="email" placeholder="Enter your email" required><br><br>
+                <input class="input"type="email" id="lastName" name="lastname" placeholder="Last Name" required><br><br>
 
                 <textarea id="message"  class="input-text" name="message" placeholder="Enter your valueable Message here"
                     required></textarea><br><br>
