updated the tech

--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
     </div>
     <div class="tech ">
     <div id="img2" class="tech-img"><img src="/images/database.png" alt=""><br><span>SQL DataBase</span></div>
+  </div>
+  <div class="tech ">
       <div id="img3" class="tech-img"><img src="/images/html (1).png" alt=""><br><span>HTML</span></div>
       <div id="img4" class="tech-img"><img src="/images/css-3.png" alt=""><br><span>CSS</span></div>
       <div id="img5" class="tech-img"><img src="/images/bootstrap.png" alt=""><br><span>Bootstrap</span></div>
