--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
     </div>
     <div class="tech ">
       <div id="img4" class="tech-img"><img src="/images/css-3.png" alt=""><br><span>CSS</span></div>
+    </div>
+    <div class="tech ">
       <div id="img5" class="tech-img"><img src="/images/bootstrap.png" alt=""><br><span>Bootstrap</span></div>
       <div id="img6" class="tech-img"><img src="/images/java-script.png" alt=""><br><span>JavaScript</span></div>
     </div>
