--- a/index.html
+++ b/index.html
@@ -47,35 +47,37 @@
   <!-- <div class="hr" style="width:100%;
   height:1px;"></div> -->
   <main>
-  <div class="container">
+    <div class="container">
       <div class="left-part">
         <h1>i am <span>Karan</span></h1>
         <h1> a <span>frontend </span></h1>
         <h1> <span>developer</span></h1>
         <h3>based in Baramati,
-          Maharashtra, India. I am a passionate web developer committed to crafting seamless and engaging digital experiences.</h3>
+          Maharashtra, India. I am a passionate web developer committed to crafting seamless and engaging digital
+          experiences.</h3>
       </div>
       <div class="right-part">
         <img src="/images/karanpic.jpg" alt="" srcset="">
       </div>
-  </div> 
+    </div>
 
-  <div class="container2 ad text-color">
+    <div class="container2 ad text-color">
       <h1 id="about-me"> <span>About Me</span></h1>
       <p>
       <h1>I am <span>Karan Chhagan Gaikwad</span>,</h1>and I'm a front-end developer based in Baramati,
-       Maharashtra, India.I am a passionate web developer committed to crafting seamless and engaging digital experiences.
-         
-       Currently, I'm pursuing My Bachlor's Degree at SPPU. where I focus on creating interactive
-       and responsive user interfaces using technologies like HTML, CSS and JavaScript.I take 
-       pride in ensuring that every web application I develop not only looks great but also
-       provides a seamless user experience.
-         
-       I'm excited to be a part of this community and look forward to connecting with fellow 
-       developers and professionals!
-  </div>
+      Maharashtra, India.I am a passionate web developer committed to crafting seamless and engaging digital
+      experiences.
 
-  <!-- <div class="container" style="display: flex; flex-direction:column">
+      Currently, I'm pursuing My Bachlor's Degree at SPPU. where I focus on creating interactive
+      and responsive user interfaces using technologies like HTML, CSS and JavaScript.I take
+      pride in ensuring that every web application I develop not only looks great but also
+      provides a seamless user experience.
+
+      I'm excited to be a part of this community and look forward to connecting with fellow
+      developers and professionals!
+    </div>
+
+    <!-- <div class="container" style="display: flex; flex-direction:column">
     <div class="adout-me">
 
       <h1 id="about-me"> <span>Education</span></h1>
@@ -84,27 +86,30 @@
     <img  style="margin: 5%;" src="https://tse2.mm.bing.net/th?id=OIP.HnDYsaVc0WsfV0ZdWQl66wHaB7&pid=Api&P=0&h=180"" alt="" width="90%" srcset="">
   </div> -->
 
-  <div class="container3 container">
-    <div class="about-me">
-      <h1><span>Technologies</span></h1>
-    </div>
-    <div class="tech ">
-      <div class="techbox"><div id="img1" class="tech-img"><img src="/images/letter-c.png" alt=""> <br><span>C Language</span></div>
-    </div>
-    <div class="tech ">
-    <div id="img2" class="tech-img"><img src="/images/database.png" alt=""><br><span>SQL DataBase</span></div>
-  </div>
-  <div class="tech ">
-      <div id="img3" class="tech-img"><img src="/images/html (1).png" alt=""><br><span>HTML</span></div>
-    </div>
-    <div class="tech ">
-      <div id="img4" class="tech-img"><img src="/images/css-3.png" alt=""><br><span>CSS</span></div>
-    </div>
-    <div class="tech ">
-      <div id="img5" class="tech-img"><img src="/images/bootstrap.png" alt=""><br><span>Bootstrap</span></div>
-      <div id="img6" class="tech-img"><img src="/images/java-script.png" alt=""><br><span>JavaScript</span></div>
-    </div>
-  </div>
+    <div class="container3 container">
+      <div class="about-me">
+        <h1><span>Technologies</span></h1>
+      </div>
+      <div class="tech ">
+        <div class="techbox">
+          <div id="img1" class="tech-img"><img src="/images/letter-c.png" alt=""> <br><span>C Language</span></div>
+        </div>
+        <div class="tech ">
+          <div id="img2" class="tech-img"><img src="/images/database.png" alt=""><br><span>SQL DataBase</span></div>
+        </div>
+        <div class="tech ">
+          <div id="img3" class="tech-img"><img src="/images/html (1).png" alt=""><br><span>HTML</span></div>
+        </div>
+        <div class="tech ">
+          <div id="img4" class="tech-img"><img src="/images/css-3.png" alt=""><br><span>CSS</span></div>
+        </div>
+        <div class="tech ">
+          <div id="img5" class="tech-img"><img src="/images/bootstrap.png" alt=""><br><span>Bootstrap</span></div>
+        </div>
+        <div class="tech ">
+          <div id="img6" class="tech-img"><img src="/images/java-script.png" alt=""><br><span>JavaScript</span></div>
+        </div>
+      </div>
   </main>
   <footer>
 
