updated the techbox

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
         <h1><span>Technologies</span></h1>
       </div>
       <div class="tech ">
+        <div class="techbox">
+        
+        </div>
         <div id="img1" class="tech-img"><img src="/images/letter-c.png" alt=""> <br><span>C Language</span></div>
         <div id="img2" class="tech-img"><img src="/images/database.png" alt=""><br><span>SQL DataBase</span></div>
         <div id="img3" class="tech-img"><img src="/images/html (1).png" alt=""><br><span>HTML</span></div>
