added number input

--- a/contactform.html
+++ b/contactform.html
@@ -16,7 +16,7 @@
                 <input class="input" type="text" id="Firstname" name="Firstname" placeholder="First name" required>
 
                 <input class="input"type="email" id="lastName" name="lastname" placeholder="Last Name" required><br><br>
-
+               <input  class="input" type="tel" name="cnumber" id="cnumber" placeholder="Enter the contact no">
                 <textarea id="message"  class="input-text" name="message" placeholder="Enter your valueable Message here"
                     required></textarea><br><br>
 
