updated form one

--- a/contactform.html
+++ b/contactform.html
@@ -20,7 +20,7 @@
                <br>
                <label   for="profession">Select the profession</label> 
                <select name="profession" id="profession">
-                   <option style="color:red" value="Stdent">Stdent</option>
+                   <option value="Stdent">Stdent</option>
                    <option value="developer">developer</option>
                    <option value="Professor">Professor</option>
                    <option value="Working Professional">Working Professional</option>
