updated form html

--- a/contactform.html
+++ b/contactform.html
@@ -18,7 +18,7 @@
                 <input class="input"type="email" id="lastName" name="lastname" placeholder="Last Name" required><br><br>
                <input  class="input" type="tel" name="cnumber" id="cnumber" placeholder="Enter the contact no">
                <br>
-               <label   for="profession">Select the profession</label> 
+               <label id="prof"  for="profession">Select the profession</label> 
                <select name="profession" id="profession">
                    <option value="Stdent">Stdent</option>
                    <option value="developer">developer</option>
