updated html file

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </div>
       <div class="techbox">
       
-        <div id="img3" class="tech-img"><img src="/images/html (1).png" alt=""><br><span>HTML</span></div>
+        <div id="img3" class="tech-img"><img src="/images/html.png" alt=""><br><span>HTML</span></div>
       </div>
       <div class="techbox">
       
