updated tech section

--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
       
         <div id="img6" class="tech-img"><img src="/images/js-logo.png" alt=""><br><span>JavaScript</span></div>
       </div>
+      <div class="techbox">
+      
+        <div id="img6" class="tech-img"><img src="/images/github-mark-white.png" alt=""><br><span>Github</span></div>
+      </div>
     </div>
   </div>
 </main>
