updated html file

--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@
       </div>
       <div class="techbox">
       
-        <div id="img6" class="tech-img"><img src="/images/github-mark-white.png" alt=""><br><span>Github</span></div>
+        <div id="img7" class="tech-img"><img src="/images/github-mark-white.png" alt=""><br><span>Github</span></div>
+      </div>
+      <div class="techbox">
+      
+        <div id="img8" class="tech-img"><img src="/images/vs-logo.png" alt=""><br><span>V S Code</span></div>
       </div>
     </div>
   </div>
