--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <div class="container2 ad text-color">
+    <div  id="about" class="container2 ad text-color">
       <h1 id="about-me"> <span>About Me</span></h1>
       <p>
       <h1>I am <span>Karan Chhagan Gaikwad</span>,</h1>and I'm a front-end developer based in Baramati,
