--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
   <main>
     <div class="container">
       <div class="left-part">
-        <h1>i am <span>Karan</span></h1>
-        <h1> a <span>frontend </span></h1>
-        <h1> <span>developer</span></h1>
+        <h1 id="name" class="pos-Relative">I am <span>Karan</span></h1>
+        <h1 id="front" class="pos-Relative"> a <span>frontend </span></h1>
+        <h1 id="dev" class="pos-Relative"> <span>developer</span></h1>
         <h3>based in Baramati,
           Maharashtra, India. I am a passionate web developer committed to crafting seamless and engaging digital
           experiences.</h3>
