--- a/index.html
+++ b/index.html
@@ -77,14 +77,15 @@
       developers and professionals!
     </div>
 
-    <!-- <div class="container" style="display: flex; flex-direction:column">
+    <section>
+      <div class="container" style="display: flex; flex-direction:column">
     <div class="adout-me">
 
       <h1 id="about-me"> <span>Education</span></h1>
     </div>
-    <br>
-    <img  style="margin: 5%;" src="https://tse2.mm.bing.net/th?id=OIP.HnDYsaVc0WsfV0ZdWQl66wHaB7&pid=Api&P=0&h=180"" alt="" width="90%" srcset="">
-  </div> -->
+   
+  </div>
+    </section>
 <section>
   <div class="container3 container">
     <div class="about-me">
