--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
 
       <h1 id="about-me"> <span>Education</span></h1>
     </div>
-   
+   <div class="Education-container">
+    <div class="Education-in-container" id="xox1"></div>
+    <div class="Education-in-container" id="xox2"></div>
+    <div class="Education-in-container" id="xox3"></div>
+   </div>
   </div>
     </section>
 <section>
