--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
    </div>
   </div>
     </section>
-<section>
+<section id="tech-container">
   <div class="container3 container">
     <div class="about-me">
       <h1><span>Technologies</span></h1>
