--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       developers and professionals!
     </div>
 
-    <section>
+    <section id="education">
       <div class="container" style="display: flex; flex-direction:column">
         <div class="adout-me">
 
