updated edu sec.

--- a/index.html
+++ b/index.html
@@ -78,11 +78,8 @@
     </div>
 
     <section id="education">
-      <div class="container" style="display: flex; flex-direction:column">
-        <div class="adout-me">
-
-          <h1 id="about-me"> <span>Education</span></h1>
-        </div>
+      <h1 id="about-me"> <span>Education</span></h1>
+      <div class="container">
         <div class="Education-container">
           <div class="Education-in-container" id="xox1"></div>
           <div class="Education-in-container" id="xox2"></div>
