--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <section id="education">
       <h1 id="about-me"> <span>Education</span></h1>
-      <div class="container">
+      <div class="container5">
         <div class="Education-container">
           <div class="Education-in-container" id="xox1"></div>
           <div class="Education-in-container" id="xox2"></div>
