updated edu sec.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
 
     <section id="education">
-      <h1 id="about-me"> <span>Education</span></h1>
+      <h1 id="about-me" class="educationclass"> <span>Education</span></h1>
       <div class="container5">
         <div class="Education-container">
           <div class="Education-in-container" id="xox1"></div>
