--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       provides a seamless user experience.
 
       I'm excited to be a part of this community and look forward to connecting with fellow
-      developers and professionals!
+      developers and professionals!</p>
     </div>
 
     <section id="education">
