--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a class="cancel-btn" onclick="closeNextNav();" href="javascript:void(0)">&times;</a>
         </div>
         <div class="actions2">
-          <div class="about-m"><a href="#about">About</a></div>
+          <div class="about-m"><a href="#about">About</a><span>></span></div>
           <div class="skills"><a href="#">Technologies</a></div>
           <div class="skills"><a href="#">Projects</a></div>
           <div class="contact-me"><a href="contactform.html">Contact Me</a></div>
