--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="actions2">
           <div class="about-m"><a href="#about">About</a><span>></span></div>
-          <div class="skills"><a href="#">Technologies</a></div>
+          <div class="skills"><a href="#">Technologies</a><span>></span></div>
           <div class="skills"><a href="#">Projects</a></div>
           <div class="contact-me"><a href="contactform.html">Contact Me</a></div>
         </div>
