--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="about-m"><a href="#about">About</a><span>></span></div>
           <div class="skills"><a href="#">Technologies</a><span>></span></div>
           <div class="skills"><a href="#">Projects</a><span>></span></div>
-          <div class="contact-me"><a href="contactform.html">Contact Me</a></div>
+          <div class="contact-me"><a href="contactform.html">Contact Me</a><span>></span></div>
         </div>
       </div>
     </nav>
