updated education sec

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <h1 id="about-me" class="educationclass"> <span>Education</span></h1>
       <div class="container5">
         <div class="Education-container">
-          <div class="Education-in-container" id="xox1">
+          <div class="Education-in-container color" id="xox1">
             <h2>Bachlor's of Science in computer Science</h2>
           </div>
           <div class="Education-in-container" id="xox2"></div>
