--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <section id="education" class="color">
       <h1 id="about-me" class="educationclass"> <span>Education</span></h1>
-      <h2>Bachlor's of Science in computer Science</h2>
+      <h2 class="educationclass">Bachlor's of Science in computer Science</h2>
       <div class="container5">
         <div class="Education-container">
           <div class="Education-in-container color" id="xox1">
