--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     <section id="education" class="color">
       <h1 id="about-me" class="educationclass"> <span>Education</span></h1>
-      <h2 class="educationclass">Bachelor of Science in Computer Science Savitribai Phule Pune University, Baramati, Maharashtra, India July 2023 - present</h2>
+      <h2 class="educationclass">Bachelor of Science in Computer Science Savitribai Phule Pune University, Baramati, Maharashtra, India July 2023 - Present</h2>
       <div class="container5">
         <div class="Education-container">
           <div class="Education-in-container color" id="xox1">
