--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
       <div class="nav-link-2">
         <div class="cbtn">
-          <a class="cancel-btn" onclick="closeNextNav();" href="javascript:void(0)">&times;</a>
+          <a class="cancel-btn" onclick="closeNextNav();rotate();" href="javascript:void(0)">&times;</a>
         </div>
         <div class="actions2">
           <div class="about-m nav-link-2-hover:hover"><a href="#about">About</a><span>></span></div>
