--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           experiences.</h3>
       </div>
       <div class="right-part">
-        <img src="/images/karanpic.jpg" alt="" srcset="">
+        <img src="/images/backgrondimg.png.jpg" alt="" srcset="">
       </div>
     </div>
 
